# covid-sprint

./: pyproject.toml
data/google_trends/: covid_weekly_google_trends.csv  covid_weekly_google_trends_AT.csv  covid_weekly_google_trends_BE.csv  covid_weekly_google_trends_BG.csv  covid_weekly_google_trends_CY.csv  covid_weekly_google_trends_CZ.csv  covid_weekly_google_trends_DE.csv  covid_weekly_google_trends_DK.csv  covid_weekly_google_trends_EE.csv  covid_weekly_google_trends_ES.csv  covid_weekly_google_trends_FI.csv  covid_weekly_google_trends_FR.csv  covid_weekly_google_trends_GB.csv  covid_weekly_google_trends_GR.csv  covid_weekly_google_trends_HR.csv  covid_weekly_google_trends_HU.csv  covid_weekly_google_trends_IE.csv  covid_weekly_google_trends_IT.csv  covid_weekly_google_trends_LT.csv  covid_weekly_google_trends_LU.csv  covid_weekly_google_trends_LV.csv  covid_weekly_google_trends_MT.csv  covid_weekly_google_trends_NL.csv  covid_weekly_google_trends_PL.csv  covid_weekly_google_trends_PT.csv  covid_weekly_google_trends_RO.csv  covid_weekly_google_trends_SE.csv  covid_weekly_google_trends_SI.csv  covid_weekly_google_trends_SK.csv
fetch_data/: download-occrp-companies_final.sh  download-openownership-statements_latest.sh  fetch-google-trends.py
process/: enrich_companies.py
