[tool.poetry]
name = "covid-sprint"
version = "0.1.0"
description = ""
authors = ["Sergio Kef <sergiokef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytrends = "^4.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
